--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,5 +1,5 @@
 .fundoLogin {
-    background-image: url("https://i.imgur.com/ZZFAmzo.jpg");
+    background-image: url("https://ik.imagekit.io/v5ijt4s2j/projetos/sala_reuniao.png?updatedAt=1752233436803");
     background-repeat: no-repeat;
     min-height: 100vh;
     width: 100%;
